syntax = "proto3";

option go_package = "github.com/jizusun/trojan-manager/helloworld/helloworld";

package helloworld;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
    rpc ServerStreamingSayHello(HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

